--- a/src/ProjectReporter/ProjectReporter.Service/appsettings.json
+++ b/src/ProjectReporter/ProjectReporter.Service/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost;port=3316;database=project_reporter;user=developer;password=password"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
