#6 - Add ReconstructionFactories. Add implementation to GroupsApi. Add Exceptions.

--- a/src/ProjectReporter/ProjectReporter.Modules/ProjectReporter.Modules.csproj
+++ b/src/ProjectReporter/ProjectReporter.Modules/ProjectReporter.Modules.csproj
@@ -25,4 +25,8 @@
       <CopyToPublishDirectory>Never</CopyToPublishDirectory>
     </None>
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="GroupsService\Api\Contracts\" />
+  </ItemGroup>
 </Project>
