#12 - Add reference to Modules for  UnitTests project. Change TargetFramework for UnitTests project. Fix version of InMemory database package. Remove unused class.

--- a/src/ProjectReporter/ProjectReporter.Modules/ProjectReporter.Modules.csproj
+++ b/src/ProjectReporter/ProjectReporter.Modules/ProjectReporter.Modules.csproj
@@ -28,5 +28,6 @@
 
   <ItemGroup>
     <Folder Include="GroupsService\Api\Contracts\" />
+    <Folder Include="UsersService\Exceptions\" />
   </ItemGroup>
 </Project>
